Task is Number separator

--- a/Day_3_2_lists.ipynb
+++ b/Day_3_2_lists.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
        "80"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "50"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
        "[70, 90, 50]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
        "[50, 90, 70, 80, 60]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "[60, 95, 70, 90, 50, 80]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "[70, 60, 95, 70, 90, 50, 80]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "95"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "[60, 70, 90, 50, 80]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "[60, 70, 90, 50, 80]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -425,6 +425,191 @@
     "\n",
     "print(\"doubled_powers ->\", doubled_powers)\n",
     "print(\"powers ->\", powers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "doubled_powers -> [4000, 6000, 8000, 3000, 9000]\n",
+      "powers -> [2000, 3000, 4000, 1500, 4500]\n"
+     ]
+    }
+   ],
+   "source": [
+    "doubled_powers = [x * 2 for x in powers]\n",
+    "\n",
+    "print(\"doubled_powers ->\", doubled_powers)\n",
+    "print(\"powers ->\", powers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 2.1\n",
+    "Find longer names (>= 6 letter)\n",
+    "\n",
+    "`characters = ['Hello kitty', 'Goku', 'Pikachu', 'Luffy', 'Yuji Itadori', \"Levi\"]`\n",
+    "\n",
+    "Expected Output\n",
+    "`['Hello kitty', 'Pikachu', 'Yuji Itadori']`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Hello kitty', 'Pikachu', 'Yuji Itadori']\n"
+     ]
+    }
+   ],
+   "source": [
+    "characters = ['Hello kitty', 'Goku', 'Pikachu', 'Luffy', 'Yuji Itadori', \"Levi\"]\n",
+    "\n",
+    "long_name_chars = []\n",
+    "for char in characters:\n",
+    "    if len(char) >= 6:\n",
+    "        long_name_chars.append(char)\n",
+    "\n",
+    "print(long_name_chars)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hello kitty', 'Pikachu', 'Yuji Itadori']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "long_name_chars = [char for char in characters if len(char) >= 6]\n",
+    "long_name_chars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "    Hello kitty,\n",
+      "    Pikachu,\n",
+      "    Yuji Itadori,\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "characters = ['Hello kitty', 'Goku', 'Pikachu', 'Luffy', 'Yuji Itadori', \"Levi\"]\n",
+    "\n",
+    "print(\"[\")\n",
+    "for char in characters:\n",
+    "    if len(char) >= 6:\n",
+    "        print(f\"    {char},\")\n",
+    "print(\"]\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 2.2\n",
+    "\n",
+    "Calculate the total of shopping_items & apply tax of 10%\n",
+    "\n",
+    "```py\n",
+    "shopping_items = [1000, 5000,  4000, 2000, 3000]\n",
+    "```\n",
+    "\n",
+    "Expected Output\n",
+    "\n",
+    "```\n",
+    "Your totals is 15,000\n",
+    "Tax is 10%      1,500 \n",
+    "Your grand total is 16,500\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Your totals is  15,000\n",
+      "Tax is 10.0%       1,500.0\n",
+      "Your grand total is  16,500.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Numberlic separator\n",
+    "shopping_items = [1000, 5000,  4000, 2000, 3000]\n",
+    "total = 0\n",
+    "tax_percent = 0.1\n",
+    "\n",
+    "for item in shopping_items:\n",
+    "    total += item\n",
+    "\n",
+    "tax = total * tax_percent\n",
+    "\n",
+    "# Formatting Output -> UX\n",
+    "output = f\"\"\"\n",
+    "Your totals is {total: ,}\n",
+    "Tax is {tax_percent * 100}%      {tax: ,}\n",
+    "Your grand total is {total + tax: ,}\n",
+    "\"\"\"\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multi Line String\n",
+    "\n",
+    "```py\n",
+    "\"\"\"\n",
+    "This is cool\n",
+    "This is amaging\n",
+    "\"\"\"\n",
+    "```\n",
+    "\n",
+    "output\n",
+    "\n",
+    "```\n",
+    "This is cool\n",
+    "This is amaging\n",
+    "```"
    ]
   }
  ],
