Day 5 List_Unpack_Tuple

--- a/Day_3_2_lists.ipynb
+++ b/Day_3_2_lists.ipynb
@@ -611,6 +611,46 @@
     "This is amaging\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Your totals is 15,000  \n",
+      "Tax is 10.0%   1,500.0\n",
+      "Your grand total is 16,500.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Numeric separator ✅\n",
+    "shopping_items = [1_000, 5_000,  4_000, 2_000, 3_000] # DX ⬆️\n",
+    "total = 0\n",
+    "tax_percent = 0.1 \n",
+    "\n",
+    "# Change `for loop` to `sum` function\n",
+    "# for item in shopping_items:  # DX ⬆️ ✅\n",
+    "#     total = total + item\n",
+    "total = sum(shopping_items)\n",
+    "\n",
+    "tax = total * tax_percent\n",
+    "grand_total = total +  tax\n",
+    "# ctrl + space -> Autocomplete | Complete word -> tab\n",
+    "\n",
+    "# Formatting Output -> UX ⬆️ ✅\n",
+    "print(f\"\"\"\n",
+    "Your totals is {total:,}  \n",
+    "Tax is {tax_percent*100}%   {tax:,}\n",
+    "Your grand total is {grand_total:,}\n",
+    "\"\"\")  # DX ⬆️ ✅"
+   ]
   }
  ],
  "metadata": {
