--- a/Day_4_2_Dictionay.ipynb
+++ b/Day_4_2_Dictionay.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(luffy)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +72,7 @@
        "'Monkey D Ruffy'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +92,7 @@
        "19"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +112,7 @@
        "['Zoro', 'Nami', 'Chopper']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +132,7 @@
        "dict_keys(['name', 'age', 'crew_name', 'crew', 'position'])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +152,7 @@
        "dict_values(['Monkey D Ruffy', 19, 'Straw hat pirates', ['Zoro', 'Nami', 'Chopper'], 'Captain'])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +188,7 @@
        "21"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -234,6 +254,43 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Task 1.1.1\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Infinite Jest', 'The Catcher in the Rye', 'Sapiens', 'A Brief History of Time', 'Clean Code']\n"
+     ]
+    }
+   ],
+   "source": [
+    "books = [\n",
+    "    {\"title\": \"Infinite Jest\", \"rating\": 4.5, \"genre\": \"Fiction\"},\n",
+    "    {\"title\": \"The Catcher in the Rye\", \"rating\": 3.9, \"genre\": \"Fiction\"},\n",
+    "    {\"title\": \"Sapiens\", \"rating\": 4.9, \"genre\": \"History\"},\n",
+    "    {\"title\": \"A Brief History of Time\", \"rating\": 4.8, \"genre\": \"Science\"},\n",
+    "    {\"title\": \"Clean Code\", \"rating\": 4.7, \"genre\": \"Technology\"},\n",
+    "]\n",
+    "\n",
+    "titles = [book[\"title\"] for book in books]\n",
+    "\n",
+    "print(titles)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -249,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -302,9 +359,91 @@
     "    if book['rating'] >= 4.7:\n",
     "        titles.append(book[\"title\"])\n",
     "\n",
-    "output = \", \".join(titles)\n",
-    "output = (output[::-1].replace(\",\", \" and\"[::-1], 1))[::-1]\n",
+    "# output = \", \".join(titles)\n",
+    "# output = (output[::-1].replace(\",\", \" and\"[::-1], 1))[::-1]\n",
+    "output = \", \".join(titles[0:-1]) + ' and ' + titles[-1]\n",
     "print(\"Highest rated books are:\", output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 1.4\n",
+    "\n",
+    "Find average rating of given genre.\n",
+    "\n",
+    "[Get Ganre User]\n",
+    "\n",
+    "```py\n",
+    "books = [\n",
+    "    {\"title\": \"Infinite Jest\", \"rating\": 4.5, \"genre\": \"Fiction\"},\n",
+    "    {\"title\": \"The Catcher in the Rye\", \"rating\": 3.9, \"genre\": \"Fiction\"},\n",
+    "    {\"title\": \"Sapiens\", \"rating\": 4.9, \"genre\": \"History\"},\n",
+    "    {\"title\": \"A Brief History of Time\", \"rating\": 4.8, \"genre\": \"Science\"},\n",
+    "    {\"title\": \"Clean Code\", \"rating\": 4.7, \"genre\": \"Technology\"},\n",
+    "]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input genre aa is not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "genre_name = input(\"Please tell me genre name?: \")\n",
+    "\n",
+    "total = 0\n",
+    "cnt = 0\n",
+    "for book in books:\n",
+    "    if book[\"genre\"].lower() == genre_name.lower():\n",
+    "        total += book[\"rating\"]\n",
+    "        cnt += 1\n",
+    "\n",
+    "if cnt != 0:\n",
+    "    ave = total / cnt\n",
+    "    print(f'{genre_name} rating average is {ave}')\n",
+    "else:\n",
+    "    print(f'Input genre {genre_name} is not found.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input genre `aaa` is not found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "genre_name = input(\"Please tell me genre name?: \")\n",
+    "\n",
+    "# ratings = []\n",
+    "# for book in books:\n",
+    "#     if book[\"genre\"].lower() == genre_name.lower():\n",
+    "#         ratings.append(book[\"rating\"])\n",
+    "\n",
+    "ratings = [book[\"rating\"] for book in books if book[\"genre\"].lower() == genre_name.lower()]\n",
+    "\n",
+    "if len(ratings) > 0:\n",
+    "    ave = sum(ratings) / len(ratings)\n",
+    "    print(f'{genre_name} movie rating average is {ave}.')\n",
+    "else:\n",
+    "    print(f'Input genre `{genre_name}` is not found.')"
    ]
   }
  ],
