study dictionary and tuple

--- a/Day_4_2_Dictionay.ipynb
+++ b/Day_4_2_Dictionay.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +361,26 @@
     "\n",
     "# output = \", \".join(titles)\n",
     "# output = (output[::-1].replace(\",\", \" and\"[::-1], 1))[::-1]\n",
-    "output = \", \".join(titles[0:-1]) + ' and ' + titles[-1]\n",
+    "output = \", \".join(titles[:-1]) + ' and ' + titles[-1]\n",
+    "print(\"Highest rated books are:\", output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Highest rated books are: Sapiens, A Brief History of Time and Clean Code\n"
+     ]
+    }
+   ],
+   "source": [
+    "titles = [book[\"title\"] for book in books if book['rating'] >= 4.7]\n",
+    "output = \", \".join(titles[:-1]) + ' and ' + titles[-1]\n",
     "print(\"Highest rated books are:\", output)"
    ]
   },
@@ -444,6 +463,75 @@
     "    print(f'{genre_name} movie rating average is {ave}.')\n",
     "else:\n",
     "    print(f'Input genre `{genre_name}` is not found.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task 1.5\n",
+    "\n",
+    "```py\n",
+    "books = [\n",
+    "    {\"title\": \"Infinite Jest\", \"rating\": 4.5, \"genre\": \"Fiction\"},\n",
+    "    {\"title\": \"The Catcher in the Rye\", \"rating\": 3.9, \"genre\": \"Fiction\"},\n",
+    "    {\"title\": \"Sapiens\", \"rating\": 4.9, \"genre\": \"History\"},\n",
+    "    {\"title\": \"A Brief History of Time\", \"rating\": 4.8, \"genre\": \"Science\"},\n",
+    "    {\"title\": \"Clean Code\", \"rating\": 4.7, \"genre\": \"Technology\"},\n",
+    "]\n",
+    "```\n",
+    "\n",
+    "\n",
+    "## Expected Output\n",
+    "\n",
+    "- Fictio : 2\n",
+    "- History : 1\n",
+    "- Science : 1\n",
+    "- Techonology : 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "books = [\n",
+    "    {\"title\": \"Infinite Jest\", \"rating\": 4.5, \"genre\": \"Fiction\"},\n",
+    "    {\"title\": \"The Catcher in the Rye\", \"rating\": 3.9, \"genre\": \"Fiction\"},\n",
+    "    {\"title\": \"Sapiens\", \"rating\": 4.9, \"genre\": \"History\"},\n",
+    "    {\"title\": \"A Brief History of Time\", \"rating\": 4.8, \"genre\": \"Science\"},\n",
+    "    {\"title\": \"Clean Code\", \"rating\": 4.7, \"genre\": \"Technology\"},\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fiction: 2\n",
+      "History: 1\n",
+      "Science: 1\n",
+      "Technology: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "genre_count = {}\n",
+    "\n",
+    "for book in books:\n",
+    "    if book[\"genre\"] in genre_count:\n",
+    "        genre_count[book[\"genre\"]] += 1\n",
+    "    else:\n",
+    "        genre_count[book[\"genre\"]] = 1\n",
+    "\n",
+    "for genre, count in genre_count.items():\n",
+    "    print(f\"{genre}: {count}\")"
    ]
   }
  ],
