--- a/Day_5_3_tuple.ipynb
+++ b/Day_5_3_tuple.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
    ],
    "source": [
     "mark1 = (80, 70, 90, 60)  # tuple\n",
-    "# mark1[1] = 100 # batsu\n",
+    "# mark1[1] = 100 # \n",
     "mark1[0]"
    ]
   },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -230,9 +230,7 @@
    "source": [
     "# Unpack only Badman & Superman\n",
     "american_comics = [\"🦸‍♂️ Batman\", \"🦸‍♂️ Superman\", \"🦹‍♂️ Joker\", \"🦹‍♀️ Harley Quinn\"]\n",
-    "\n",
     "batman, superman, _, _ = american_comics\n",
-    "\n",
     "print(batman, superman)"
    ]
   },
@@ -255,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -267,8 +265,33 @@
     }
    ],
    "source": [
+    "# Solution 1\n",
     "points = [(3,4), (6,12), (10, 13)]\n",
     "distances = [round((x**2 + y**2)**0.5, 2) for x, y in points]\n",
+    "print(f\"distance = {distances}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "distance = [5.0, 13.42, 16.4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Solution 2\n",
+    "points = [(3,4), (6,12), (10, 13)]\n",
+    "distances = []\n",
+    "for x, y in points:\n",
+    "    z = (x**2 + y**2) ** 0.5\n",
+    "    distances.append(round(z, 2))\n",
+    "\n",
     "print(f\"distance = {distances}\")"
    ]
   }
