--- a/Day_6_functions.ipynb
+++ b/Day_6_functions.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "11"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_total_items(shop: dict):\n",
+    "    \"\"\"\n",
+    "    Calc shop total items\n",
+    "\n",
+    "    Params:\n",
+    "        shop : Calc shop data.  \n",
+    "            Format -> {\"name\": string, \"quantity\": integer, \"price\": float} \n",
+    "\n",
+    "    Return:\n",
+    "        shop total items\n",
+    "        type: integer\n",
+    "    \"\"\"\n",
+    "    return sum([item[\"quantity\"] for item in shop])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +312,7 @@
        "50"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +348,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_shop_value(shop: dict):\n",
+    "    \"\"\"\n",
+    "    Calc shop value\n",
+    "\n",
+    "    Params:\n",
+    "        shop : Calc shop data.  \n",
+    "            Format -> {\"name\": string, \"quantity\": integer, \"price\": float} \n",
+    "\n",
+    "    Return:\n",
+    "        shop value\n",
+    "        type: integer\n",
+    "    \"\"\"\n",
+    "    return sum([item[\"quantity\"] * item[\"price\"] for item in shop])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +378,7 @@
        "19.0"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +446,7 @@
        " {'name': 'Orange', 'quantity': 50, 'price': 0.3}]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,27 +481,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tabulate import tabulate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi 🍍\n",
-      "Hi 🍍\n",
-      "Hi 🍍\n"
+      "------------  ---  ---\n",
+      "Apple          30  0.5\n",
+      "Banana         20  0.2\n",
+      "Orange🍊       50  0.3\n",
+      "Watermelon🍉  100  0.8\n",
+      "melon🍈        80  0.6\n",
+      "🍓             60  0.2\n",
+      "------------  ---  ---\n"
      ]
     }
    ],
    "source": [
     "def sub_menu():\n",
     "    while True:\n",
-    "        print(\"Hi 🍍\")\n",
+    "        add_new_product(shop)\n",
     "        if not check_add_more():\n",
     "            break\n",
     "\n",
-    "sub_menu()"
+    "sub_menu()\n",
+    "print(tabulate(shop))"
    ]
   },
   {
@@ -476,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -516,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -558,10 +615,16 @@
       "[\n",
       "    {'name': 'Apple', 'quantity': 30, 'price': 0.5}\n",
       "    {'name': 'Banana', 'quantity': 20, 'price': 0.2}\n",
-      "    {'name': 'Orange', 'quantity': 50, 'price': 0.3}\n",
-      "    {'name': 'Orange', 'quantity': 50, 'price': 0.4}\n",
-      "    {'name': 'Orange', 'quantity': 50, 'price': 0.3}\n",
+      "    {'name': 'Orange🍊', 'quantity': 50, 'price': 0.3}\n",
+      "    {'name': 'Watermelon🍉', 'quantity': 100, 'price': 0.8}\n",
       "]\n",
+      "\n",
+      "Main Menu\n",
+      "1. Add Product\n",
+      "2. Print all product in shop\n",
+      "3. Exit\n",
+      "\n",
+      "Added melon🍈 to shop.\n",
       "\n",
       "Main Menu\n",
       "1. Add Product\n",
@@ -571,9 +634,9 @@
       "[\n",
       "    {'name': 'Apple', 'quantity': 30, 'price': 0.5}\n",
       "    {'name': 'Banana', 'quantity': 20, 'price': 0.2}\n",
-      "    {'name': 'Orange', 'quantity': 50, 'price': 0.3}\n",
-      "    {'name': 'Orange', 'quantity': 50, 'price': 0.4}\n",
-      "    {'name': 'Orange', 'quantity': 50, 'price': 0.3}\n",
+      "    {'name': 'Orange🍊', 'quantity': 50, 'price': 0.3}\n",
+      "    {'name': 'Watermelon🍉', 'quantity': 100, 'price': 0.8}\n",
+      "    {'name': 'melon🍈', 'quantity': 80, 'price': 0.6}\n",
       "]\n",
       "\n",
       "Main Menu\n",
@@ -588,11 +651,50 @@
    "source": [
     "main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------  --  ---\n",
+      "Apple   30  0.5\n",
+      "Banana  20  0.2\n",
+      "------  --  ---\n",
+      "name      quantity    price\n",
+      "------  ----------  -------\n",
+      "Apple           30      0.5\n",
+      "Banana          20      0.2\n",
+      "+--------+----------+-------+\n",
+      "|  name  | quantity | price |\n",
+      "+--------+----------+-------+\n",
+      "| Apple  |    30    |  0.5  |\n",
+      "| Banana |    20    |  0.2  |\n",
+      "+--------+----------+-------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tabulate import tabulate\n",
+    "\n",
+    "shop = [\n",
+    "    {\"name\": \"Apple\", \"quantity\": 30, \"price\": 0.50},  # 15\n",
+    "    {\"name\": \"Banana\", \"quantity\": 20, \"price\": 0.20},  # 4\n",
+    "]\n",
+    "\n",
+    "print(tabulate(shop))\n",
+    "print(tabulate(shop, headers=\"keys\"))\n",
+    "print(tabulate(shop, headers=\"keys\", tablefmt=\"pretty\"))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
